--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   The Subversive's Guide to Geospatial Relevance is a collection of points of interest that challenge how we define historical significance.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://allilevine.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://allilevine.github.io/the-subversives-guide-to-geospatial-relevance/" # the base hostname & protocol for your site
+twitter_username: allilevine
+github_username:  allilevine
 permalink: /:categories/:title/
 
 # Build settings
